Refine hero section content - improve flow and connection between concepts

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span>, I research consumer utility and choice behavior using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
                     </p>
                     <p class="hero-description">
-                        I'm fascinated by the concept of intelligence itself. I also explore fundamental questions in <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>, aspiring to bridge human decision-making with artificial intelligence.
+                        I'm fascinated by the concept of intelligence itself. This drives my exploration of fundamental questions in <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>, aspiring to bridge human decision-making with artificial intelligence.
                     </p>
                     <div class="hero-buttons">
                         <a href="./Haoran Resume.pdf" class="btn btn-primary" target="_blank">
