--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <p class="timeline-company">The Ohio State University • Dr. Christopher A. Reed</p>
                         <p class="timeline-date">April 2024 – May 2025</p>
                         <p class="timeline-description">
-                            Applied modern NLP techniques and the SCENE method to traditional History research.
+                            Applied modern NLP techniques and the SCENE method to traditional history research.
                         </p>
                     </div>
                 </div>
