--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </h1>
                     <p class="hero-subtitle">AI Researcher</p>
                     <p class="hero-description">
-                        As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span>, I research consumer utility and choice behavior using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
+                        As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span>, I research consumer utility and choice behavior in Quantitative Marketing using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
                     </p>
                     <p class="hero-description">
                         My fascination with the nature of intelligence drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>, aiming to connect insights from human decision-making to the design and understanding of artificial intelligence.
