--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             An empirical evaluation framework for explainable AI techniques in NLP tasks.
                         </p>
                     </div>
-                    <a href="https://scholar.google.com/citations?user=t8z21IQAAAAJ&hl=en" class="publication-link" target="_blank">
+                    <a href="https://arxiv.org/abs/2408.04575" class="publication-link" target="_blank">
                         <i data-lucide="external-link"></i>
                     </a>
                 </div>
