--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <p class="timeline-company">The Ohio State University</p>
                         <p class="timeline-date">February 2021 – May 2022</p>
                         <p class="timeline-description">
-                            Taught two weekly recitations for 65 students each, focusing on statistical concepts and analytic tools like R. Developed customized review notes and visual aids for 900+ enrolled students each semester.
+                            Taught two weekly recitations for 65 students each, spanning 4 semesters. Developed customized review notes for 900+ enrolled students per term.
                         </p>
                     </div>
                 </div>
