--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haoran Zheng - AI Researcher</title>
-    <meta name="description" content="AI Researcher at The University of Chicago specializing in AI Interpretability and Consciousness">
+    <meta name="description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, Consciousness & Human Decision-Making">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -55,10 +55,10 @@
                     </h1>
                     <p class="hero-subtitle">AI Researcher</p>
                     <p class="hero-description">
-                        As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span>, I research consumer utility and choice behavior in Quantitative Marketing using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
+                        As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span> in Quantitative Marketing, I research consumer utility and choice behavior under uncertainty using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
                     </p>
                     <p class="hero-description">
-                        My fascination with the nature of intelligence drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>, aiming to connect insights from human decision-making to the design and understanding of artificial intelligence.
+                        My fascination with the nature of decision-making drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>——using insights from human behavior to inform the design and understanding of AI, while leveraging AI advances to illuminate and enhance how we make choices.
                     </p>
                     <div class="hero-buttons">
                         <a href="./Haoran Resume.pdf" class="btn btn-primary" target="_blank">
@@ -150,14 +150,14 @@
                         <i data-lucide="zap"></i>
                     </div>
                     <h3>AI Consciousness</h3>
-                    <p>Exploring the boundaries and implications of artificial consciousness</p>
+                    <p>Investigating whether and how artificial systems might experience consciousness</p>
                 </div>
                 <div class="research-card">
                     <div class="research-icon">
                         <i data-lucide="trending-up"></i>
                     </div>
                     <h3>Quantitative Marketing</h3>
-                    <p>Applying AI and data science to marketing research and consumer behavior</p>
+                    <p>Modeling consumer choice and decision-making under uncertainty using discrete-choice methods</p>
                 </div>
             </div>
             <div class="publications">
@@ -190,7 +190,7 @@
                         <p class="timeline-company">The University of Chicago Booth • Dr. Andreas Kraft</p>
                         <p class="timeline-date">June 2025 – Present</p>
                         <p class="timeline-description">
-                            Researching consumer utility and choice behavior using discrete-choice models of demand, with applications to both illicit and legal automobile markets.
+                            Researching consumer utility and choice behavior under uncertainty using discrete-choice models of demand, with applications to illicit automobile markets.
                         </p>
                     </div>
                 </div>
