--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haoran Zheng - AI Researcher</title>
-    <meta name="description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, Consciousness & Human Decision-Making">
+    <meta name="description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Human Decision-Making">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -58,7 +58,7 @@
                         As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span> in Quantitative Marketing, I research consumer utility and choice behavior under uncertainty using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
                     </p>
                     <p class="hero-description">
-                        My fascination with the nature of decision-making drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>, using insights from human behavior to inform the design and understanding of AI, while leveraging AI advances to illuminate and enhance how we make choices.
+                        My fascination with decision-making drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>—using insights from human behavior to inform the design and understanding of AI, while leveraging AI advances to illuminate and enhance how we make choices.
                     </p>
                     <div class="hero-buttons">
                         <a href="./Haoran Resume.pdf" class="btn btn-primary" target="_blank">
