--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         As a <span class="highlight-blue">Predoc Fellow at The University of Chicago Booth School of Business</span> in Quantitative Marketing, I research consumer utility and choice behavior under uncertainty using discrete-choice models of demand with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>.
                     </p>
                     <p class="hero-description">
-                        My fascination with decision-making drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>—using insights from human choice behavior to guide the design and understanding of AI, while leveraging AI advances to reveal and enhance how we make choices.
+                        My fascination with decision-making drives me to explore <span class="highlight-blue">AI Interpretability</span> and <span class="highlight-blue">AI Consciousness</span>—using insights from human choice behavior to guide the design and understanding of AI, while leveraging AI advances to reveal and enhance how we make decisions.
                     </p>
                     <div class="hero-buttons">
                         <a href="./Haoran Resume.pdf" class="btn btn-primary" target="_blank">
