--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Haoran Zheng - AI Researcher</title>
     <meta name="author" content="Haoran Zheng">
-    <meta name="description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Human Decision-Making">
+    <meta name="description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Choice Modeling">
     <meta name="keywords" content="AI research, consciousness, interpretability, machine learning, quantitative marketing, consumer behavior, LLMs, explainable AI">
     <link rel="canonical" href="https://haoranzhengraul.github.io/">
 
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://haoranzhengraul.github.io/">
     <meta property="og:title" content="Haoran Zheng - AI Researcher">
-    <meta property="og:description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Human Decision-Making">
+    <meta property="og:description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Choice Modeling">
     <meta property="og:image" content="https://haoranzhengraul.github.io/assets/IMG/thumbnail.jpg">
     <meta property="og:image:width" content="1135">
     <meta property="og:image:height" content="639">
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://haoranzhengraul.github.io/">
     <meta name="twitter:title" content="Haoran Zheng - AI Researcher">
-    <meta name="twitter:description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Human Decision-Making">
+    <meta name="twitter:description" content="AI Researcher | Predoc Fellow at UChicago Booth | AI Interpretability, AI Consciousness & Choice Modeling">
     <meta name="twitter:image" content="https://haoranzhengraul.github.io/assets/IMG/thumbnail.jpg">
     <meta name="twitter:image:alt" content="Haoran Zheng - AI Researcher">
     <meta name="twitter:creator" content="@HaoranZhengRaul">
@@ -77,7 +77,7 @@
                     </h1>
                     <p class="hero-subtitle">AI Researcher</p>
                     <p class="hero-description">
-                        Current <span class="highlight-blue">Pre-doc Fellow at The University of Chicago Booth</span> in Quantitative Marketing with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>. I'm applying for PhD programs in CS or Quant Marketing for the Fall 2027 cycle!
+                        Current <span class="highlight-blue">Pre-doc Fellow at The University of Chicago Booth</span> in Quantitative Marketing with <a href="https://www.chicagobooth.edu/faculty/directory/k/andreas-kraft" target="_blank" class="inline-link">Prof. Andreas Kraft</a>. I'm applying for PhD programs in Computer Science or Marketing for the Fall 2027 cycle!
                     </p>
                     <p class="hero-description">
                         I'm broadly interested in decision-making and the nature of intelligence. My research publications/preprints span <a href="/papers/scene.html" class="inline-link">AI Interpretability</a>, <a href="/papers/butterflies.html" class="inline-link">AI Consciousness</a>, and Choice Modeling. Details can be found on my <a href="https://scholar.google.com/citations?user=t8z21IQAAAAJ&hl=en" target="_blank" class="inline-link">Google Scholar</a>.
